--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": ["prettier", "react-app", "eslint:recommended"],
   "rules": {
-    "no-console": ["error", { "allow": ["error"] }],
-    "curly": "error"
+    "no-console": ["error", { "allow": ["error", "log"] }],
+    "curly": "error",
+    "no-unused-vars": "off"
   }
 }
