--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": ["prettier", "react-app", "eslint:recommended"],
   "rules": {
-    "no-console": ["error", { "allow": ["error"] }],
+    "no-console": ["log", { "allow": ["log"] }],
     "curly": "error"
   }
 }
