--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -49,10 +50,14 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "msw": "^0.47.4",
     "prettier": "^2.7.1"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,tsx,ts}": "eslint --cache --fix",
     "*.{js,css,md,tsx,ts}": "prettier --write"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
