--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "faker": "^5.5.3",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-date-range": "^1.4.0",
