--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "faker": "^5.5.3",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "^4.3.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.16",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2",
