--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-date-range": "^1.4.0",
@@ -29,7 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "heroku-prebuild": "npm i --only=production --ignore-scripts && npm run build",
+    "start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "serve-json": "json-server --watch db.json --port 4000",
