--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "json-server": "^0.17.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-date-range": "^1.4.0",
